--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <!-- <user-profile></user-profile> -->
 <app-header></app-header>
-<router-outlet>  
-</router-outlet> 
+<router-outlet>
+</router-outlet>
+<simple-notifications [options]="notificationOptions"></simple-notifications>
