--- a/src/app/user-profile/user-profile.component.html
+++ b/src/app/user-profile/user-profile.component.html
@@ -1,21 +1,10 @@
-<div *ngIf="auth.user | async; then authenticated else guest">
-    <!-- template will replace this div -->
-</div>
-<!-- User NOT logged in -->
-<ng-template #guest>
-    <h3>Howdy, GUEST</h3>
-    <p>Login to get started...</p>
-
-    <button (click)="register()">
-  <i class="fa fa-google"></i> Connect Google
-</button>
-</ng-template>
-<!-- User logged in -->
-<ng-template #authenticated>
-    <div *ngIf="auth.user | async as user">
-        <h3>Howdy, {{ user.displayName }}</h3>
+<div class="profile_header" *ngIf="auth.user | async as user">
+    <div class="user_pic">
         <img [src]="user.photoURL">
-        <p>UID: {{ user.uid }}</p>
-        <button (click)="auth.signOut()">Logout</button>
     </div>
-</ng-template>
+    <div class="user_info">
+        <div class="userName">{{ user.displayName }}</div>
+        <div class="userID">{{ user.email }}</div>
+        <div class="logoutBtn" title="Logout" (click)="auth.signOut()"><i class="icon-switch"></i></div>
+    </div>
+</div>
