--- a/src/app/user/login/login.component.css
+++ b/src/app/user/login/login.component.css
@@ -31,6 +31,7 @@
 
 #login_logo {
     height: 50px;
+    color: rgb(193, 249, 255);
 }
 
 .cont_tabs_login {
@@ -53,7 +54,7 @@
     font-size: 16px;
     color: #999;
     line-height: 14px;
-    padding: 20px;
+    padding: 12px;
     display: block;
     cursor: pointer;
     transition: all 0.5s;
@@ -67,7 +68,7 @@
     position: relative;
     width: 100%;
     float: left;
-    background-color: #999;
+    background-color: #aaa;
     height: 2px;
 }
 
@@ -122,18 +123,18 @@
     padding: 0px;
     opacity: 0;
     display: none;
-    transition: all 0.5s;
+    transition: all 0.2s;
 }
 
 .active_inp {
-    margin: 5% 5%;
-    padding: 10px 0px;
+    margin: 0px 3% 10px;
+    padding: 15px 2%;
     opacity: 1;
     height: 5px;
 }
 
 .input_form_sign:focus {
-    border-bottom: 2px solid #00A4BB;
+    border-bottom: 1px solid #00A4BB;
 }
 
 .link_forgot_pass,
@@ -142,7 +143,7 @@
     margin-top: 0px;
     margin-left: 35%;
     text-decoration: none;
-    color: #999;
+    color: #00A4BB;
     font-size: 13px;
     display: none;
     float: left;
