--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
+
+* {
+    margin: 0px auto;
+    padding: 0px;
+    font-family: "Helvetica Neue", "Helvetica", "Arial", "sans-serif";
+}
+
+a {
+    text-decoration: none;
+}
