ADDED: UI for adding skills.

--- a/src/app/user-profile/user-profile.component.html
+++ b/src/app/user-profile/user-profile.component.html
@@ -8,3 +8,8 @@
         <div class="logoutBtn" title="Logout" (click)="auth.signOut()"><i class="icon-switch"></i></div>
     </div>
 </div>
+<div class="content">
+    <app-myskill>
+
+    </app-myskill>
+</div>
