--- a/src/app/skiils/myskill/myskill.component.css
+++ b/src/app/skiils/myskill/myskill.component.css
@@ -82,3 +82,36 @@
     border: 1px solid #ccc;
     color: #999;
 }
+
+
+/* ================================================= */
+
+.skillsList {
+    cursor: pointer;
+}
+
+.skillRow {
+    margin: 10px 0px 0px;
+    width: 100%;
+    line-height: 30px;
+}
+
+.skillRow:nth-child(n+5) {
+    width: auto;
+    display: inline-block;
+}
+
+.plusCounts {
+    display: inline-block;
+    height: 30px;
+    width: 30px;
+    border-radius: 50%;
+    color: #00A4BB;
+    border: 2px solid #00A4BB;
+    text-align: center;
+}
+
+.skillName {
+    display: inline-block;
+    padding: 0px 10px;
+}
