--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -5,7 +5,7 @@
 }
 
 .dashboard-user {
-    padding: 20px;
+    padding: 20px 10px !important;
     cursor: pointer;
 }
 
@@ -25,7 +25,10 @@
     border-radius: 50%;
     height: 30px;
     width: 30px;
-    display: inline-block;
+    float: left;
+    box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.2), 0 2px 2px 0 rgba(0, 0, 0, 0.24);
+    background-color: #ccc;
+    border: none;
 }
 
 .usersName,
@@ -33,9 +36,23 @@
     display: inline-block;
     height: 30px;
     vertical-align: middle;
+    line-height: 30px;
+    padding: 0px 10px;
 }
 
 .usersMail {
     font-size: 11px;
     color: #777;
+}
+
+.rightIcon {
+    float: right;
+    color: #ccc;
+    line-height: 30px;
+    transition: all 1s fade;
+}
+
+.userRow:hover .rightIcon {
+    color: #777;
+    margin-right: -2px;
 }
