--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -15,6 +15,7 @@
     cursor: pointer;
     vertical-align: middle;
     height: 30px;
+    outline: none;
 }
 
 .userRow:hover {
@@ -37,7 +38,7 @@
     height: 30px;
     vertical-align: middle;
     line-height: 30px;
-    padding: 0px 10px;
+    padding: 0px 0px 0px 10px;
 }
 
 .usersMail {
