ADDED Logic to toggle endrosements.

--- a/src/app/user/others-info/others-info.component.html
+++ b/src/app/user/others-info/others-info.component.html
@@ -12,7 +12,7 @@
     <div class="skillsList" title="Endrose Skills">
         <div *ngFor="let skill of skills | async" class="skillRow" (click)="endrose(skill)">
             <div class="plusCounts">{{skill.data.endorsements}}
-                <i class="icon-plus"></i>
+                <i class="icon-plus" *ngIf="skill.isEndrosed == -1"></i>
             </div>
             <div class="skillName">{{skill.id}}</div>
         </div>
