ADDED: Hovercards to userProfile.

--- a/src/app/skiils/myskill/myskill.component.css
+++ b/src/app/skiils/myskill/myskill.component.css
@@ -121,3 +121,15 @@
     display: inline-block;
     padding: 0px 10px;
 }
+
+.skillRow:hover .plusCounts i {
+    transform: scale(1.2);
+}
+
+.endrosedBy {
+    float: right;
+}
+
+.endrosedUser {
+    outline: none;
+}
