--- a/src/app/skiils/myskill/myskill.component.html
+++ b/src/app/skiils/myskill/myskill.component.html
@@ -16,6 +16,11 @@
         <div *ngFor="let skill of skills | async" class="skillRow">
             <div class="plusCounts">{{skill.data.endorsements}}</div>
             <div class="skillName">{{skill.id}}</div>
+            <div class="endrosedBy">
+                <div class="endrosedUser" *ngFor="let user of skill.data.endroseBy">
+                    <app-hover-card [UID]="user"></app-hover-card>
+                </div>
+            </div>
         </div>
         <div id="newBtn" class="skillBtn">Add New Skill</div>
     </div>
