--- a/src/app/user/others-info/others-info.component.css
+++ b/src/app/user/others-info/others-info.component.css
@@ -13,6 +13,8 @@
 .user_pic img {
     width: 100px;
     margin: 25px;
+    border-radius: 50%;
+    box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.2), 0 2px 2px 0 rgba(0, 0, 0, 0.24);
 }
 
 .user_info {
@@ -49,6 +51,10 @@
 .skillRow:nth-child(n+5) {
     width: auto;
     display: inline-block;
+}
+
+.skillRow:nth-child(n+5) .endrosedBy {
+    display: none;
 }
 
 .plusCounts {
@@ -89,4 +95,12 @@
 
 .skillRow:hover .plusCounts i {
     transform: scale(1.2);
+}
+
+.endrosedBy {
+    float: right;
+}
+
+.endrosedUser {
+    outline: none;
 }
