--- a/src/app/user/others-info/others-info.component.html
+++ b/src/app/user/others-info/others-info.component.html
@@ -10,11 +10,16 @@
 </div>
 <div class="content">
     <div class="skillsList" title="Endrose Skills">
-        <div *ngFor="let skill of skills | async" class="skillRow" (click)="endrose(skill)">
-            <div class="plusCounts" [ngClass]="skill.isEndrosed == -1 ? 'endrosedN': 'endrosed'">{{skill.data.endorsements}}
+        <div *ngFor="let skill of skills | async" class="skillRow">
+            <div class="plusCounts" (click)="endrose(skill)" [ngClass]="skill.isEndrosed == -1 ? 'endrosedN': 'endrosed'">{{skill.data.endorsements}}
                 <i class="icon-plus" *ngIf="skill.isEndrosed == -1"></i>
             </div>
-            <div class="skillName">{{skill.id}}</div>
+            <div class="skillName" (click)="endrose(skill)">{{skill.id}}</div>
+            <div class="endrosedBy">
+                <div class="endrosedUser" *ngFor="let user of skill.data.endroseBy">
+                    <app-hover-card [UID]="user"></app-hover-card>
+                </div>
+            </div>
         </div>
     </div>
 </div>
