--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -3,7 +3,8 @@
         <img [src]="user.photoURL" class="userDP">
         <span class="usersName">{{user.displayName}}</span>
         <span class="usersMail">{{user.email}}</span>
-        <i class="icon-chevron-right rightIcon"></i>
+        <span class="rightIcon"><span>View my Profile</span><i class="icon-chevron-right"></i></span>
+
     </div>
 </div>
 
