--- a/src/app/skiils/myskill/myskill.component.css
+++ b/src/app/skiils/myskill/myskill.component.css
@@ -133,3 +133,13 @@
 .endrosedUser {
     outline: none;
 }
+
+.showDiv {
+    visibility: visible;
+    display: block;
+}
+
+.hideDiv {
+    display: none;
+    visibility: hidden;
+}
