IMPROVED: Header UI

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -4,7 +4,7 @@
             <i class="icon-list"></i>
         </a>
     </div>
-    <a [routerLink]="['/login']" [routerLinkActive]="['router-link-active']" class="list-group-item" mat-button>
+    <a [routerLink]="['']" [routerLinkActive]="['router-link-active']" class="list-group-item" mat-button>
         <div class="nav_title">SkillApp</div>
     </a>
     <div class="nav_right">
