--- a/src/app/skiils/myskill/myskill.component.html
+++ b/src/app/skiils/myskill/myskill.component.html
@@ -1,7 +1,7 @@
 <h3>What I'm good at: </h3>
 <div id="skillsDiv" [ngClass]="(editSkill == false) ? 'hideDiv':'showDiv'">
     <div class="skillsDiv">
-        <ng-select class="skillsInput" [active]="mySkills" [multiple]="true" [items]="items" [disabled]="disabled" (data)="refreshValue($event)" (selected)="selected($event)" (removed)="removed($event)" placeholder="No skills selected"></ng-select>
+        <ng-select class="skillsInput" [active]="mySkills" [multiple]="true" [items]="items" (data)="refreshValue($event)" (selected)="selected($event)" (removed)="removed($event)" placeholder="No skills selected"></ng-select>
         <div class="skillBtns">
             <div (click)="updateSkills()" class="skillBtn">Update</div>
             <div class="skillBtn inverseBtn" (click)="switchEditMode(false)">Cancel</div>
