--- a/src/app/user/others-info/others-info.component.html
+++ b/src/app/user/others-info/others-info.component.html
@@ -1,11 +1,12 @@
 <div class="profile_header" *ngIf="userDetails | async as user">
-    <div class="user_pic">
-        <img [src]="user.photoURL">
-    </div>
-    <div class="user_info">
-        <div class="userName">{{ user.displayName }}</div>
-        <div class="userID">{{ user.email }}</div>
-        <!-- <div class="logoutBtn" title="Logout" (click)="auth.signOut()"><i class="icon-switch"></i></div> -->
+    <div class="content" style="padding:0px">
+        <div class="user_pic">
+            <img [src]="user.photoURL">
+        </div>
+        <div class="user_info">
+            <div class="userName">{{ user.displayName }}</div>
+            <div class="userID">{{ user.email }}</div>
+        </div>
     </div>
 </div>
 <div class="content">
