ADDED: Custom Pipe to display only first name.

--- a/src/app/user/login/login.component.html
+++ b/src/app/user/login/login.component.html
@@ -26,7 +26,7 @@
                     <input type="password" formControlName="password2" class="input_form_sign" placeholder="CONFIRM PASSWORD" name="conf_pass_us" />
 
                     <span class="link_forgot_pass d_block" (click)="reset_UI()"> Forgot Password ?</span>
-                    <span class="link_forgot_pass_back d_none" (click)="sign_in_UI()"> <i class="icon-back"></i> Back to Login</span>
+                    <span class="link_forgot_pass_back d_none" (click)="sign_in_UI()"> <i class="icon-arrow-left2"></i> Back to Login</span>
                     <div class="terms_and_cons d_none">
                         <p>
                             <input type="checkbox" formControlName="TnC" name="terms_and_cons" />
