--- a/src/app/skiils/myskill/myskill.component.css
+++ b/src/app/skiils/myskill/myskill.component.css
@@ -106,6 +106,10 @@
     display: inline-block;
 }
 
+.skillRow:nth-child(n+5) .endrosedBy {
+    display: none;
+}
+
 .plusCounts {
     display: inline-block;
     height: 30px;
