--- a/src/app/user/others-info/others-info.component.css
+++ b/src/app/user/others-info/others-info.component.css
@@ -105,3 +105,57 @@
     outline: none;
     display: inline-block;
 }
+
+.contentHead {
+    padding: 5px 0px;
+}
+
+.contentHead H3 {
+    display: inline-block;
+    /* padding: 5px 0px; */
+}
+
+.endroseMore {
+    float: right;
+}
+
+.input_form_skill {
+    padding: 5px 8px;
+    border: 1px solid #00a4bb;
+    border-radius: 3px;
+    width: 100px;
+}
+
+.endroseMore .submitBtn {
+    background: #00a4bb;
+    border: none;
+    color: #fff;
+    padding: 5px 8px;
+    border-radius: 3px;
+    cursor: pointer;
+    font-size: 12px;
+}
+
+.endroseMore .cancelBtn {
+    /* background: #00a4bb; */
+    border: 1px solid #00a4bb;
+    font-size: 10px;
+    color: #00a4bb;
+    padding: 5px 8px;
+    border-radius: 3px;
+    cursor: pointer;
+}
+
+.endroseMoreBtn {
+    border: 1px solid #00a4bb;
+    color: #00a4bb;
+    padding: 5px 8px;
+    font-size: 10px;
+    border-radius: 3px;
+    cursor: pointer;
+}
+
+.endroseMoreBtn:hover {
+    background-color: #00a4bb;
+    color: #fff;
+}
